@@ -1,4 +1,5 @@
 - ActiveRecord.ar_parse_includes: ignore not existing associations
+- Paginable: remove default values for limit and offset parameters
 
 * Thu Mar 03 2016 - version 0.5.2
 - Fix ActiveRecord dependency
